# MachineLearning

./: .buildinfo  README.md  genindex.html  intro.html  main.html  main2.1.html  main2.2.html  main2.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  test.txt
Projekat I/: main.ipynb  main.py  opis.txt  projekat1.ipynb
Projekat I/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Projekat I/catboost_info/learn/: events.out.tfevents
Projekat I/catboost_info/test/: events.out.tfevents
Projekat I/mainbook/: _toc.yml  main.ipynb
Projekat I/mainbook/_build/.doctrees/: environment.pickle  intro.doctree  main.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
Projekat I/mainbook/_build/html/: .buildinfo  genindex.html  intro.html  main.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  (+2 more)
Projekat III/: all_model_metrics_summary.csv  london_rain.csv  london_rain_engineered_features.csv  projekat3.1.ipynb  projekat3.2.ipynb  projekat3.3.ipynb  projekat3.ipynb
Projekat III/Marko/: projekat3.3Marko.ipynb  projekat3.3MarkoLatest.ipynb
Projekat III/Sanja/: projekat3.3Sanja.ipynb
Projekat III/Zastarelo/: projekat3.1.ipynb  projekat3.2.ipynb  projekat3.ipynb
Projekti/Other/: test.py
Projekti/mainbook/: _config.yml  _toc.yml  main.ipynb  main2.1.ipynb  main2.2.ipynb
Projekti/mainbook/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
_sources/: main.ipynb  main2.ipynb
(+33 files in other folders)
