[project]
name = "machinelearning"
version = "0.1.0"
description = "Projekat iz predmeta masinsko ucenje"
authors = [
    {name = "markoandjel",email = "60831775+markoandjel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
